--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@chakra-ui/image": "^2.0.16",
 		"@chakra-ui/react": "^2.6.1",
+		"@emailjs/browser": "^4.3.3",
 		"@emotion/cache": "^11.11.0",
 		"@emotion/react": "^11.11.0",
 		"@emotion/server": "^11.10.0",
