--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@reduxjs/toolkit": "^1.9.5",
 		"algoliasearch": "^4.16.0",
 		"axios": "^1.4.0",
+		"emailjs-com": "^3.2.0",
 		"eslint": "8.31.0",
 		"eslint-config-next": "13.1.1",
 		"firebase": "^10.3.1",
